<resources>
    <string name="phoneAppLabel">Phone</string>
    <string name="emergencyDialerIconLabel">Emergency Dialer</string>
    <string name="phoneIconLabel">Phone</string>
    <string name="fdnListLabel">FDN list</string>
    <string name="unknown">Unknown</string>
    <string name="private_num">Private number</string>
    <string name="payphone">Pay phone</string>
    <string name="onHold">On hold</string>
    <string name="callFailed_userBusy">Line busy</string>
    <string name="callFailed_congestion">Network busy</string>
    <string name="callFailed_timedOut">No response, timed out</string>
    <string name="callFailed_server_unreachable">Server unreachable</string>
    <string name="callFailed_number_unreachable">Number unreachable</string>
    <string name="callFailed_invalid_credentials">Incorrect username or password</string>
    <string name="callFailed_out_of_network">Called from out-of-network</string>
    <string name="callFailed_server_error">Server error. Try again later.</string>
    <string name="callFailed_noSignal">No signal</string>
    <string name="callFailed_limitExceeded">ACM limit exceeded</string>
    <string name="callFailed_powerOff">Radio off</string>
    <string name="callFailed_simError">No SIM or SIM error</string>
    <string name="callFailed_outOfService">Out of service area</string>
    <string name="callFailed_fdn_only">Outgoing calls are restricted by FDN.</string>
    <string name="callFailed_dialToUssd">DIAL request modified to USSD request.</string>
    <string name="callFailed_dialToSs">DIAL request modified to SS request.</string>
    <string name="callFailed_dialToDial">DIAL request modified to DIAL with different number.</string>
    <string name="callFailed_cb_enabled">"You can't make outgoing calls while call barring is on."</string>
    <string name="callFailed_incoming_cb_enabled">Party has barred all Incoming calls.</string>
    <string name="callFailed_dsac_restricted">All calls are restricted by access control.</string>
    <string name="callFailed_dsac_restricted_emergency">Emergency calls are restricted by access control.</string>
    <string name="callFailed_dsac_restricted_normal">Normal calls are restricted by access control.</string>
    <string name="callFailed_unobtainable_number">Invalid number</string>
    <string name="confCall">Conference call</string>
    <string name="call_lost">Call has been lost.</string>
    <string name="callUnanswered_forwarded">Call Unanswered and Forwarded</string>
    <string name="retry">Retry</string>
    <string name="call_lost_title">Call Lost</string>
    <string name="ok">OK</string>
    <string name="mmiStarted">MMI code started</string>
    <string name="ussdRunning">USSD code running…</string>
    <string name="mmiCancelled">MMI code canceled</string>
    <string name="cancel">Cancel</string>
    <string name="enter_input">Input Required. Try again!!</string>
    <string name="manageConferenceLabel">Manage conference call</string>
    <string name="audio_mode_speaker">Speaker</string>
    <string name="audio_mode_earpiece">Handset earpiece</string>
    <string name="audio_mode_wired_headset">Wired headset</string>
    <string name="audio_mode_bluetooth">Bluetooth</string>
    <string name="wait_prompt_str">"Send the following tones?
"</string>
    <string name="pause_prompt_str">"Sending tones
"</string>
    <string name="send_button">Send</string>
    <string name="pause_prompt_yes">Yes</string>
    <string name="pause_prompt_no">No</string>
    <string name="wild_prompt_str">Replace wild character with</string>
    <string name="modify_call_prompt_yes">Yes</string>
    <string name="modify_call_prompt_no">No</string>
    <string name="modify_call_failure_str">"Modify Call request failed
"</string>
    <string name="modify_call_option_title">Which type of call?</string>
    <string name="modify_call_option_vt">VT</string>
    <string name="modify_call_option_vt_tx">Video transmit</string>
    <string name="modify_call_option_vt_rx">Video receive</string>
    <string name="modify_call_option_voice">Voice Only</string>
    <string name="accept_modify_call_request_prompt">Accept modify call request?</string>
    <string name="upgrade_vt_prompt">Would you like to upgrade the call to video call?</string>
    <string name="upgrade_vt_tx_prompt">Would you like to upgrade the call to video transmit only call?</string>
    <string name="upgrade_vt_rx_prompt">Would you like to upgrade the call to video receive only call?</string>
    <string name="vt_init_fail_str">"VT initialization failed. Downgrading call to VoLTE
"</string>
    <string name="no_vm_number">Missing voicemail number</string>
    <string name="no_vm_number_msg">No voicemail number is stored on the SIM card.</string>
    <string name="add_vm_number_str">Add number</string>
    <string name="puk_unlocked">Your SIM card has been unblocked. Your phone is unlocking…</string>
    <string name="label_ndp">SIM network unlock PIN</string>
    <string name="label_nsdp">SIM network subset unlock PIN</string>
    <string name="label_cdp">SIM corporate unlock PIN</string>
    <string name="label_spdp">SIM service provider unlock PIN</string>
    <string name="labelGSMMore">GSM call settings</string>
    <string name="labelCDMAMore">CDMA call settings</string>
    <string name="voicemail">Voicemail</string>
    <string name="call_settings">Call settings</string>
    <string name="sum_gsm_call_settings">Additional GSM only call settings</string>
    <string name="sum_cdma_call_settings">Additional CDMA only call settings</string>
    <string name="labelCW">Call waiting</string>
    <string name="call_forwarding_settings">Call forwarding settings</string>
    <string name="labelCFU">Always forward</string>
    <string name="messageCFU">Always use this number</string>
    <string name="sum_cfu_enabled">Forwarding all calls to {0}</string>
    <string name="sum_cfu_disabled">Disabled</string>
    <string name="labelCFB">Forward when busy</string>
    <string name="messageCFB">Number when busy</string>
    <string name="sum_cfb_enabled">Forwarding to {0}</string>
    <string name="sum_cfb_disabled">Disabled</string>
    <string name="labelCFNRy">Forward when unanswered</string>
    <string name="messageCFNRy">Number when unanswered</string>
    <string name="sum_cfnry_enabled">Forwarding to {0}</string>
    <string name="sum_cfnry_disabled">Disabled</string>
    <string name="labelCFNRc">Forward when unreachable</string>
    <string name="messageCFNRc">Number when unreachable</string>
    <string name="sum_cfnrc_enabled">Forwarding to {0}</string>
    <string name="sum_cfnrc_disabled">Disabled</string>
    <string name="sum_voicemail_choose_provider">Choose voicemail service</string>
    <string name="mobile_networks">Mobile network settings</string>
    <string name="preferred_network_mode_title">Network Mode</string>
    <string name="preferred_network_mode_summary">Change the network operating mode</string>
    <string name="preferred_network_mode_dialogtitle">Preferred network mode</string>
    <string name="data_enabled">Data enabled</string>
    <string name="data_enable_summary">Enable data access over Mobile network</string>
    <string name="roaming">Data roaming</string>
    <string name="roaming_enable">Connect to data services when roaming</string>
    <string name="roaming_disable">Connect to data services when roaming</string>
    <string name="cdma_lte_data_service">Set up data service</string>
    <string name="fdn">Fixed Dialing Numbers</string>
    <string name="tty_mode_option_title">TTY mode</string>
    <string name="tty_mode_option_summary">Set TTY mode</string>
    <string name="auto_retry_mode_title">Auto-retry</string>
    <string name="auto_retry_mode_summary">Enable Auto-retry mode</string>
    <string name="voicemail_settings_number_label">Voicemail number</string>
    <string name="hac_mode_title">Hearing aids</string>
    <string name="hac_mode_summary">Turn on hearing aid compatibility</string>
    <string name="dtmf_tones_title">DTMF tones</string>
    <string name="dtmf_tones_summary">Set the length of DTMF tones</string>
    <string name="xdivert_title">X-Divert</string>
    <string name="xdivert_summary">CFNRc Settings</string>
    <string name="voicemail_provider">Service</string>
    <string name="voicemail_settings">Setup</string>
    <string name="other_settings">Other call settings</string>
    <string name="sip_edit_title">SIP account details</string>
    <string name="domain_address_title">Server</string>
    <string name="username_title">Username</string>
    <string name="password_title">Password</string>
    <string name="display_name_title">Display name</string>
    <string name="proxy_address_title">Outbound proxy address</string>
    <string name="port_title">Port number</string>
    <string name="transport_title">Transport type</string>
    <string name="send_keepalive_title">Send keep-alive</string>
    <string name="set_primary_title">Set as primary account</string>
    <string name="set_primary_summary">Used for outbound calls</string>
    <string name="advanced_settings">Optional settings</string>
    <string name="auth_username_title">Authentication username</string>
    <string name="auth_username_summary">Username used for authentication</string>
    <string name="default_preference_summary">&lt;Not set></string>
    <string name="display_name_summary">&lt;Same as username></string>
    <string name="optional_summary">&lt;Optional></string>
    <string name="default_port">5060</string>
    <string name="default_transport">UDP</string>
    <string name="advanced_settings_show">▷ Touch to show all</string>
    <string name="sip_system_decide">Automatic</string>
    <string name="domain_address">SipDomain</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="display_name">DisplayName</string>
    <string name="proxy_address">ProxyAddress</string>
    <string name="port">Port</string>
    <string name="transport">Protocol</string>
    <string name="send_keepalive">SendKeepAlive</string>
    <string name="set_primary">SetPrimary</string>
    <string name="advanced_settings_container">advanced settings container</string>
    <string name="auth_username">AuthUserName</string>
    <string name="ims_edit_title">IMS account details</string>
    <string name="ims_domain_address_title">IMS Server</string>
    <string name="call_type">CallType</string>
    <string name="call_type_title">IMS Call type</string>
    <string name="default_ims_call_type">Voice</string>
    <string name="use_ims_default">UseImsDefault</string>
    <string name="use_ims_default_title">Use IMS Always</string>
    <string name="use_ims_default_summary">Use IMS for all voice calls</string>
    <string name="respond_via_sms_setting_title">Quick responses</string>
    <string name="respond_via_sms_setting_summary" />
    <string name="voicemail_notification_vibrate_when_title">Vibrate</string>
    <string name="voicemail_notification_ringtone_title">Sound</string>
    <string name="ringtone_title">Phone ringtone</string>
    <string name="vibrate_on_ring_title">Vibrate when ringing</string>
    <string name="dtmf_tone_enable_title">Dial pad touch tones</string>
    <string name="preference_category_ringtone">Ringtone &amp; Vibrate</string>
    <string name="sub_1">SUB 1</string>
    <string name="sub_2">SUB 2</string>
    <string name="aurora_overturn_mute_title">Overturn to mute</string>
    <string name="aurora_cf_title">Call forward</string>
    <string name="aurora_cf_dialog_title">Call Forward To This Number</string>
    <string name="aurora_incoming_touch_title">prevent from touching unintentionally when ringing</string>
    <string name="aurora_ringer_title">Smart Ringing</string>
    <string name="aurora_ringer_summary">The ringer is stronger little by little, and the ringer is weaker when user holds the phone</string>
</resources>