<?xml version="1.0" encoding="utf-8"?>
<AuroraPreferenceScreen aurora:auroratitle="@string/call_forwarding_settings"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:phone="http://schemas.android.com/apk/res/com.android.phone"
  xmlns:aurora="http://schemas.android.com/apk/res/com.aurora">
    <com.android.phone.CallForwardEditPreference android:singleLine="true" android:autoText="false" android:summaryOn="@string/sum_cfu_enabled" android:summaryOff="@string/sum_cfu_disabled" android:dialogMessage="@string/messageCFU" aurora:aurorakey="button_cfu_key" aurora:auroratitle="@string/labelCFU" aurora:auroraenabled="false" aurora:aurorapersistent="false" aurora:auroradialogTitle="@string/aurora_cf_dialog_title" phone:confirmMode="activation" phone:serviceClass="voice" phone:reason="unconditional" />
    <com.android.phone.CallForwardEditPreference android:singleLine="true" android:autoText="false" android:summaryOn="@string/sum_cfb_enabled" android:summaryOff="@string/sum_cfb_disabled" android:dialogMessage="@string/messageCFB" aurora:aurorakey="button_cfb_key" aurora:auroratitle="@string/labelCFB" aurora:auroraenabled="false" aurora:auroradependency="button_cfu_key" aurora:aurorapersistent="false" aurora:auroradialogTitle="@string/aurora_cf_dialog_title" phone:confirmMode="activation" phone:serviceClass="voice" phone:reason="busy" />
    <com.android.phone.CallForwardEditPreference android:singleLine="true" android:autoText="false" android:summaryOn="@string/sum_cfnry_enabled" android:summaryOff="@string/sum_cfnry_disabled" android:dialogMessage="@string/messageCFNRy" aurora:aurorakey="button_cfnry_key" aurora:auroratitle="@string/labelCFNRy" aurora:auroraenabled="false" aurora:auroradependency="button_cfu_key" aurora:aurorapersistent="false" aurora:auroradialogTitle="@string/aurora_cf_dialog_title" phone:confirmMode="activation" phone:serviceClass="voice" phone:reason="no_reply" />
    <com.android.phone.CallForwardEditPreference android:singleLine="true" android:autoText="false" android:summaryOn="@string/sum_cfnrc_enabled" android:summaryOff="@string/sum_cfnrc_disabled" android:dialogMessage="@string/messageCFNRc" aurora:aurorakey="button_cfnrc_key" aurora:auroratitle="@string/labelCFNRc" aurora:auroraenabled="false" aurora:auroradependency="button_cfu_key" aurora:aurorapersistent="false" aurora:auroradialogTitle="@string/aurora_cf_dialog_title" phone:confirmMode="activation" phone:serviceClass="voice" phone:reason="not_reachable" />
</AuroraPreferenceScreen>