<?xml version="1.0" encoding="utf-8"?>
<AuroraPreferenceScreen aurora:auroratitle="@string/call_settings"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:aurora="http://schemas.android.com/apk/res/com.aurora"
  xmlns:phone="http://schemas.android.com/apk/res/com.android.phone">
    <AuroraPreferenceCategory aurora:auroraicon="@drawable/sim1_icon" aurora:aurorakey="sim1_category_key" aurora:auroratitle="@string/sub_1" aurora:aurorapersistent="false">
        <AuroraPreferenceScreen aurora:aurorakey="button_cf_expand_key1" aurora:auroratitle="@string/aurora_cf_title" aurora:aurorapersistent="false">
            <intent android:targetPackage="com.android.phone" android:action="android.intent.action.MAIN" android:targetClass="com.android.phone.GsmUmtsCallForwardOptions" />
        </AuroraPreferenceScreen>
        <AuroraPreferenceScreen aurora:aurorakey="button_more_expand_key1" aurora:auroratitle="@string/labelCW" aurora:aurorapersistent="false">
            <intent android:targetPackage="com.android.phone" android:action="android.intent.action.MAIN" android:targetClass="com.android.phone.GsmUmtsAdditionalCallOptions" />
        </AuroraPreferenceScreen>
    </AuroraPreferenceCategory>
    <AuroraPreferenceCategory aurora:auroraicon="@drawable/sim2_icon" aurora:aurorakey="sim2_category_key" aurora:auroratitle="@string/sub_2" aurora:aurorapersistent="false">
        <AuroraPreferenceScreen aurora:aurorakey="button_cf_expand_key2" aurora:auroratitle="@string/aurora_cf_title" aurora:aurorapersistent="false">
            <intent android:targetPackage="com.android.phone" android:action="android.intent.action.MAIN" android:targetClass="com.android.phone.GsmUmtsCallForwardOptions" />
        </AuroraPreferenceScreen>
        <AuroraPreferenceScreen aurora:aurorakey="button_more_expand_key2" aurora:auroratitle="@string/labelCW" aurora:aurorapersistent="false">
            <intent android:targetPackage="com.android.phone" android:action="android.intent.action.MAIN" android:targetClass="com.android.phone.GsmUmtsAdditionalCallOptions" />
        </AuroraPreferenceScreen>
    </AuroraPreferenceCategory>
    <AuroraPreferenceCategory aurora:aurorakey="button_misc_category_key" aurora:auroratitle="@string/other_settings" aurora:aurorapersistent="false" />
    <AuroraCheckBoxPreference aurora:aurorakey="button_play_dtmf_tone" aurora:auroratitle="@string/dtmf_tone_enable_title" aurora:aurorapersistent="false" aurora:auroradefaultValue="true" />
    <AuroraCheckBoxPreference aurora:aurorakey="button_auto_retry_key" aurora:auroratitle="@string/auto_retry_mode_title" aurora:aurorasummary="@string/auto_retry_mode_summary" aurora:aurorapersistent="false" />
    <AuroraListPreference aurora:aurorakey="button_tty_mode_key" aurora:auroratitle="@string/tty_mode_option_title" aurora:aurorasummary="@string/tty_mode_option_summary" aurora:aurorapersistent="false" aurora:auroraentries="@array/tty_mode_entries" aurora:auroraentryValues="@array/tty_mode_values" />
    <AuroraCheckBoxPreference aurora:aurorakey="button_hac_key" aurora:auroratitle="@string/hac_mode_title" aurora:aurorasummary="@string/hac_mode_summary" aurora:aurorapersistent="true" />
    <AuroraListPreference aurora:aurorakey="button_dtmf_settings" aurora:auroratitle="@string/dtmf_tones_title" aurora:aurorasummary="@string/dtmf_tones_summary" aurora:auroraentries="@array/dtmf_tone_entries" aurora:auroraentryValues="@array/dtmf_tone_values" />
    <AuroraPreferenceScreen aurora:aurorakey="button_xdivert" aurora:auroratitle="@string/xdivert_title" aurora:aurorasummary="@string/xdivert_summary" aurora:aurorapersistent="false" />
    <AuroraSwitchPreference aurora:aurorakey="aurora_overturn_mute_switch" aurora:auroratitle="@string/aurora_overturn_mute_title" aurora:auroradefaultValue="@bool/aurora_def_overturn_mute_switch" />
    <AuroraSwitchPreference aurora:aurorakey="aurora_ringer_switch" aurora:auroratitle="@string/aurora_ringer_title" aurora:aurorasummary="@string/aurora_ringer_summary" aurora:auroradefaultValue="@bool/aurora_ringer" />
</AuroraPreferenceScreen>