<?xml version="1.0" encoding="utf-8"?>
<AuroraPreferenceScreen aurora:auroratitle="@string/mobile_networks"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:phone="http://schemas.android.com/apk/res/com.android.phone"
  xmlns:aurora="http://schemas.android.com/apk/res/com.aurora">
    <AuroraPreferenceScreen aurora:aurorakey="cdma_lte_data_service_key" aurora:auroratitle="@string/cdma_lte_data_service" />
    <com.android.phone.dataEnableSwitchPreference aurora:aurorakey="button_data_enabled_key" aurora:auroratitle="@string/data_enabled" aurora:aurorasummary="@string/data_enable_summary" aurora:aurorapersistent="false" />
    <com.android.phone.dataRoamSwitchPreference aurora:aurorakey="button_roaming_key" aurora:auroratitle="@string/roaming" aurora:aurorapersistent="false" aurora:aurorasummaryOn="@string/roaming_enable" aurora:aurorasummaryOff="@string/roaming_disable" />
    <AuroraListPreference aurora:aurorakey="preferred_network_mode_key" aurora:auroratitle="@string/preferred_network_mode_title" aurora:aurorasummary="@string/preferred_network_mode_summary" aurora:auroradialogTitle="@string/preferred_network_mode_dialogtitle" aurora:auroraentries="@array/aurora_preferred_network_mode_choices" aurora:auroraentryValues="@array/aurora_preferred_network_mode_values" />
    <AuroraPreferenceScreen aurora:aurorakey="preferred_network_mode_key2" aurora:auroratitle="@string/preferred_network_mode_title" aurora:aurorapersistent="false">
        <intent android:targetPackage="com.android.phone" android:action="android.intent.action.MAIN" android:targetClass="com.android.phone.PreferNetworkSettings" />
    </AuroraPreferenceScreen>
</AuroraPreferenceScreen>